[package]
name = "fluxion"
license = "MIT OR Apache-2.0"
description = "Fluxion is an actor framework written in rust and designed for distributed systems."
repository = "https://github.com/peperworx/fluxion"
categories = ["concurrency"]
keywords = ["actor", "distributed", "async", "fluxion"]
readme = "README.md"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


async-trait = { version = "0.1.68", optional = true }

serde = { version = "1.0.183", default-features = false, features = ["derive", "alloc"], optional = true }
thiserror-no-std = "2.0.2"

# The oneshot channel used for responding to messages
async-oneshot = "0.5.0"

# The mpmc (used as mpsc) for the supervisor
whisk = "0.12.0"

# For RwLock in broadcast channel
maitake-sync = "0.1.0"

futures = { version = "0.3.28", default-features = false, features = ["async-await"] }



[features]
default = ["async-trait", "foreign", "notification"]
# Enables async-trait for async functions in traits. If disabled, requires nightly.
async-trait = ["dep:async-trait"]
# Enables foreign message support.
foreign = ["serde"]
# Enables serde support
serde = ["dep:serde"]
# Enables notification support
notification = []


[build-dependencies]
cfg_aliases = "0.1.1"
pin-project = "1.1.3"

[dev-dependencies]
bincode = "1.3.3"
tokio = { version = "1.32.0", default-features = false, features = ["full"] }

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[package.metadata.cargo-all-features]

skip_feature_sets = [
    [],
]


denylist = ["default"]

always_include_features = ["async_trait"]
