[package]
name = "fluxion_message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal fluxion dependencies
fluxion_error = { path = "../fluxion_error" }

# Serde-related dependencies.
serde = { version = "1.0.183", features = ["derive"], optional = true }

# For the respodner in the message handler.
async-oneshot = "0.5.0"

[features]
default = ["foreign", "federated"]
# Enables foreign message support.
foreign = ["serde"]
# Enables serde support
serde = ["dep:serde"]
# Enables federated message support
federated = []

[build-dependencies]
cfg_aliases = "0.1.1"

[package.metadata.cargo-feature-combinations]
denylist = ["default"]